[metadata]
name = sema
version = 0.1.2
license = MIT
author = Moein Mavini
author_email = moinmavini@gmail.com
description = Define easy to use and user friendly settings for your programs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MoeinMavini/sema
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
